--- a/src/main/resources/templates/loginSuccess.html
+++ b/src/main/resources/templates/loginSuccess.html
@@ -10,6 +10,8 @@
     <div class="label label-info">
         Welcome, <span th:text="${name}">user</span>!
     </div>
+    <a href="/logout" >Loooogout</a>
+    <img th:src="@{${src}}"/>
 </h3>
 </body>
 </html>
