--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,13 +22,17 @@
 </head>
 
 <body>
-<div >
-    <p th:if="${errorMessage}" th:utext="${errorMessage}"></p>
-    <h4><a th:href="@{/oauth2/authorization/google}" >Google</a> </h4>
-    <h4><a th:href="@{/oauth2/authorization/github}" >Github</a> </h4>
-    <h4><a th:href="@{/oauth2/authorization/facebook}" >Facebook</a> </h4>
 
-</div>
+<main class="page landing-page">
+
+    <div >
+        <p th:if="${errorMessage}" th:utext="${errorMessage}"></p>
+        <h4><a th:href="@{/oauth2/authorization/google}" >Google</a> </h4>
+        <h4><a th:href="@{/oauth2/authorization/github}" >Github</a> </h4>
+        <h4><a th:href="@{/oauth2/authorization/facebook}" >Facebook</a> </h4>
+    </div>
+
+</main>
 </body>
 
 </html>
