--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
         }
 
         .nav-wrapper {
-            background-color: whitesmoke;
+            background-color: #343a40!important;
         }
 
         .background-img {
@@ -78,8 +78,9 @@
 </head>
 <body>
 <main>
+
     <nav class="nav-wrapper">
-        <p class="brand-logo left" style="color: black;margin: 10px">Effective planning Application</p>
+        <p class="brand-logo center" style="margin-top: 10px">Effective planning Application</p>
     </nav>
     <div class="divider"></div>
     <section class="section" style="background-color: white">
@@ -134,10 +135,10 @@
             tasks.</p>
     </section>
 </main>
-
-<footer class="page-footer grey">
+<div class="divider"></div>
+<footer class="page-footer blue-grey darken-3">
     <div class="footer-copyright">
-        <div class="container">
+        <div class="container" style="padding: 15px">
             © 2020 Effective planning Application
         </div>
     </div>
