--- a/src/main/resources/templates/loginSuccess.html
+++ b/src/main/resources/templates/loginSuccess.html
@@ -1,17 +1,118 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login Success</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/f592291c08.js" crossorigin="anonymous"></script>
+
+    <styles>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+                integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+                crossorigin="anonymous"></script>
+        <style>
+
+
+            #sidebar-wrapper {
+                min-height: 100vh;
+                margin-left: -15rem;
+                -webkit-transition: margin .25s ease-out;
+                -moz-transition: margin .25s ease-out;
+                -o-transition: margin .25s ease-out;
+                transition: margin .25s ease-out;
+            }
+
+            #sidebar-wrapper .sidebar-heading {
+                padding: 0.875rem 1.25rem;
+                font-size: 1.2rem;
+            }
+            #sidebar-wrapper .sidebar-text {
+                padding: 0.875rem 1.25rem;
+                font-size: 1rem;
+                font-weight: bold;
+            }
+            #sidebar-wrapper .sidebar-image-container{
+                margin-left: auto;
+                margin-right: auto;
+                padding: 20px;
+            }
+
+            #sidebar-wrapper .list-group {
+                width: 15rem;
+            }
+
+            #page-content-wrapper {
+                min-width: 100vw;
+            }
+
+            #wrapper.toggled #sidebar-wrapper {
+                margin-left: 0;
+            }
+
+            @media (min-width: 768px) {
+                #sidebar-wrapper {
+                    margin-left: 0;
+                }
+
+                #page-content-wrapper {
+                    min-width: 0;
+                    width: 100%;
+                }
+
+                #wrapper.toggled #sidebar-wrapper {
+                    margin-left: -15rem;
+                }
+            }
+
+        </style>
+    </styles>
 </head>
 <body>
-<h3>
-    <div class="label label-info">
-        Welcome, <span th:text="${name}">user</span>!
+<div th:insert="navbar:: navbar"></div>
+<div id="page-content-wrapper">
+<div class="d-flex" id="wrapper">
+    <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="sidebar-image-container">
+            <img class="rounded-circle z-depth-2" width="80px" th:src="@{${src}}"
+                 data-holder-rendered="true">
+        </div>
+        <div class="sidebar-heading">Welcome <span th:text="${name}">user</span>!</div>
+        <div class="sidebar-text"> Tasks List</div>
+        <div class="list-group list-group-flush" th:each="taskList : ${tasksList}" >
+            <!--/*@thymesVar id="tasksList" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskListReadModel>"*/-->
+            <a  class="list-group-item list-group-item-action bg-light"  th:text="${taskList.getName()}">  </a>
+
+        </div>
+        <!--/*@thymesVar id="newTaskList" type="pl.senti.effectiveplanningapp.model.request.TaskListWriteModel"*/-->
+        <form action="/taskList" method="post" th:object="${newTaskList}">
+            <div class="form-group" style="padding: 10px">
+                <label>Add new list</label>
+                <input type="text" class="form-control"  placeholder="Enter name" th:field="*{name}">
+
+            </div>
+            <div class="row">
+                <div class="col text-center">
+            <button type="submit" class="btn btn-outline-dark">Add</button>
+                </div>
+            </div>
+        </form>
     </div>
-    <a href="/logout" >Loooogout</a>
-    <img th:src="@{${src}}"/>
-</h3>
+
+    </div>
+</div>
+
+<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <div class="container text-center">
+        <small>Copyright &copy; Effective planning Application</small>
+    </div>
+</footer>
+
 </body>
 </html>
