--- a/src/main/resources/templates/loginSuccess.html
+++ b/src/main/resources/templates/loginSuccess.html
@@ -5,19 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/f592291c08.js" crossorigin="anonymous"></script>
 
     <styles>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-                crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-                integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-                crossorigin="anonymous"></script>
         <style>
+
+
+            #wrapper {
+                overflow-x: hidden;
+            }
 
 
             #sidebar-wrapper {
@@ -78,66 +73,166 @@
             }
 
         </style>
-        <script>
-            $(function () {
-                $('[data-toggle="tooltip"]').tooltip();
-            });
-
-        </script>
     </styles>
 </head>
 <body>
 <div th:insert="navbar:: navbar"></div>
-<div id="page-content-wrapper">
-    <div class="d-flex" id="wrapper">
-        <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-image-container">
-                <img class="rounded-circle z-depth-2" width="80px" th:src="@{${src}}"
-                     data-holder-rendered="true">
-            </div>
-            <div class="sidebar-heading">Welcome <span th:text="${name}">user</span>!</div>
-            <div class="sidebar-text"> Tasks List</div>
-            <div class="list-group list-group-flush" th:each="taskList : ${tasksList}">
-                <!--/*@thymesVar id="tasksList" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskListReadModel>"*/-->
-                <div style="display: flex;padding-bottom: 10px;padding-right: 5px">
-                    <a class="list-group-item list-group-item-action bg-light"
-                       style="display: inline-block;padding: 10px"
-                       th:text="${taskList.getName()}">dfdf </a>
 
-                    <form th:method="delete" th:action="@{/taskList/{taskListId}(taskListId=${taskList.getId()})}">
-                        <button class="btn btn-danger btn-sm rounded-0" type="submit" data-toggle="tooltip"
-                                data-placement="top" title="Delete"
-                                style="display: inline-block;padding: 12px;"><i
-                                class="fa fa-trash"></i></button>
+<div class="d-flex" id="wrapper">
+
+
+    <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="sidebar-image-container">
+            <img class="rounded-circle z-depth-2" width="80px" th:src="@{${src}}"
+                 data-holder-rendered="true">
+        </div>
+        <div class="sidebar-heading">Welcome <span th:text="${name}">user</span>!</div>
+        <div class="sidebar-text"> Tasks List</div>
+        <div class="list-group list-group-flush" th:each="taskList : ${tasksList}">
+            <!--/*@thymesVar id="tasksList" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskListReadModel>"*/-->
+            <div style="display: flex;padding-bottom: 10px;padding-right: 5px">
+                <form method="get" th:action="@{/home/task/{taskListId}(taskListId=${taskList.getId()})}"
+                      style="min-width: 80%">
+                    <button class="list-group-item list-group-item-action bg-light"
+                            style="display: inline-block;padding: 10px;"
+                            th:text="${taskList.getName()}">Home
+                    </button>
+                </form>
+
+                <form th:method="delete" th:action="@{/taskList/{taskListId}(taskListId=${taskList.getId()})}">
+                    <button class="btn btn-danger btn-sm rounded-0" type="submit" data-toggle="tooltip"
+                            data-placement="top" title="Delete"
+                            style="display: inline-block;padding: 12px;"><i
+                            class="fa fa-trash"></i></button>
+                </form>
+
+            </div>
+
+
+        </div>
+        <!--/*@thymesVar id="newTaskList" type="pl.senti.effectiveplanningapp.model.request.TaskListWriteModel"*/-->
+        <form action="/taskList" method="post" th:object="${newTaskList}">
+            <div class="form-group" style="padding: 10px">
+                <label>Add new list</label>
+                <input type="text" class="form-control" placeholder="Enter name" th:field="*{name}">
+
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <button type="submit" class="btn btn-outline-dark">Add</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+    <div id="page-content-wrapper">
+
+
+        <div class="container-fluid">
+
+
+            <div class="modal-body row">
+                <div class="col-md-6">
+                    <!-- Your first column here -->
+
+
+                    <!--/*@thymesVar id="tasks" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskReadModel>"*/-->
+                    <ul class="col list-group" th:each="task : ${tasks}">
+                        <li class="list-group-item" th:text="${task.getName()}">Active item</li>
+
+                    </ul>
+
+
+                </div>
+                <div class="col-md-6">
+                    <!-- Your second column here -->
+
+                    <form>
+                        <div class="form-group">
+                            <label>Task name</label>
+                            <input type="text" class="form-control" placeholder="Enter name">
+                        </div>
+
+                        <div class="form-group">
+                            <label>Deadline</label>
+                            <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                                <input type="text" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}-[0-9]{2}:[0-9]{2}-([AaPp][Mm]))"
+                                       class="form-control datetimepicker-input"
+                                       data-target="#datetimepicker1" placeholder="Date"/>
+                                <div class="input-group-append" data-target="#datetimepicker1"
+                                     data-toggle="datetimepicker">
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Notes</label>
+                            <textarea class="form-control" rows="3" placeholder="Insert your notes here"></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Priority</label>
+                            <select class="form-control">
+                                <option>None</option>
+                                <option>Height</option>
+                                <option>Medium</option>
+                                <option>Low</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Subtask</label>
+                            <input type="text" class="form-control" placeholder="Enter name of subtask">
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col text-center">
+                        <button type="submit" class="btn btn-outline-dark" style="margin: 10px;width: 40%" >Add task</button>
+                                </div>
+                            </div>
+                        </div>
                     </form>
-
                 </div>
-
-
             </div>
-            <!--/*@thymesVar id="newTaskList" type="pl.senti.effectiveplanningapp.model.request.TaskListWriteModel"*/-->
-            <form action="/taskList" method="post" th:object="${newTaskList}">
-                <div class="form-group" style="padding: 10px">
-                    <label>Add new list</label>
-                    <input type="text" class="form-control" placeholder="Enter name" th:field="*{name}">
 
-                </div>
-                <div class="row">
-                    <div class="col text-center">
-                        <button type="submit" class="btn btn-outline-dark">Add</button>
-                    </div>
-                </div>
-            </form>
+
         </div>
 
+
     </div>
+
 </div>
+
+</div>
+
 
 <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
     <div class="container text-center">
         <small>Copyright &copy; Effective planning Application</small>
     </div>
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
+<script src="https://kit.fontawesome.com/f592291c08.js" crossorigin="anonymous"></script>
+
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css"/>
+
 
 </body>
 </html>
