--- a/src/main/resources/templates/loginSuccess.html
+++ b/src/main/resources/templates/loginSuccess.html
@@ -5,6 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <styles>
         <style>
@@ -72,7 +79,64 @@
 
             }
 
+            .bs-example {
+                margin: 20px;
+            }
+
+            .accordion .fa {
+                margin-right: 0.5rem;
+                font-size: 24px;
+                font-weight: bold;
+                position: relative;
+                top: 2px;
+            }
+
+            .custom-control-input-green:focus ~ .custom-control-label::before {
+                border-color: #28a745 !important;
+                box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25) !important;
+            }
+
+            .custom-control-input-green:checked ~ .custom-control-label::before {
+                border-color: #28a745 !important;
+                background-color: #28a745 !important;
+            }
+
+            .custom-control-input-green:focus:not(:checked) ~ .custom-control-label::before {
+                border-color: #5bd778 !important;
+            }
+
+            .custom-control-input-green:not(:disabled):active ~ .custom-control-label::before {
+                background-color: #d6f5dd !important;
+                border-color: #d6f5dd !important;
+            }
+
+            .greenBackground {
+                background-color: green;
+                opacity: 0.6;
+            }
+            .task-label{
+                font-weight: bold;
+            }
+
         </style>
+        <script>$("input[type='checkbox']").change(function () {
+            if ($(this).is(":checked")) {
+                console.log("duupa");
+                $(".card").css({"background-color": "yellow", "font-size": "200%"});
+            } else if ($(this).is(":not(:checked)")) {
+                console.log("duupa");
+                $(".card").css({"background-color": "red", "font-size": "200%"});
+            }
+        });
+        $(function () {
+            $('#datetimepicker1').datetimepicker({
+                format: 'YYYY-MM-DD HH:mm', // or 'l' (lowercase L) for non-zero-padded
+                date: moment()
+            });
+        });
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });</script>
     </styles>
 </head>
 <body>
@@ -83,10 +147,13 @@
 
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="sidebar-image-container">
+            <!--/*@thymesVar id="src" type="java.lang.String"*/-->
             <img class="rounded-circle z-depth-2" width="80px" th:src="@{${src}}"
                  data-holder-rendered="true">
         </div>
-        <div class="sidebar-heading">Welcome <span th:text="${name}">user</span>!</div>
+        <div class="sidebar-heading">Welcome <!--/*@thymesVar id="name" type="java.lang.String"*/-->
+            <span th:text="${name}">user</span>!
+        </div>
         <div class="sidebar-text"> Tasks List</div>
         <div class="list-group list-group-flush" th:each="taskList : ${tasksList}">
             <!--/*@thymesVar id="tasksList" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskListReadModel>"*/-->
@@ -114,8 +181,10 @@
         <form action="/taskList" method="post" th:object="${newTaskList}">
             <div class="form-group" style="padding: 10px">
                 <label>Add new list</label>
-                <input type="text" class="form-control" placeholder="Enter name" th:field="*{name}">
-
+                <input type="text" class="form-control" placeholder="Enter name" th:field="*{name}" required>
+                <div class="invalid-feedback">
+                    TaskList name can not be empty
+                </div>
             </div>
             <div class="row">
                 <div class="col text-center">
@@ -136,61 +205,155 @@
                 <div class="col-md-6">
                     <!-- Your first column here -->
 
-
                     <!--/*@thymesVar id="tasks" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskReadModel>"*/-->
-                    <ul class="col list-group" th:each="task : ${tasks}">
-                        <li class="list-group-item" th:text="${task.getName()}">Active item</li>
+                    <div class="bs-example">
+                         <span th:if="${#lists.isEmpty(tasks)}" class="alert alert-primary" role="alert">
+                               Select any to-do list on the left side to display the tasks
+                            </span>
+                        <div class="accordion" id="accordionExample">
 
-                    </ul>
+                            <div class="card" th:each="task : ${tasks}">
 
+                                <div class="card-header d-flex justify-content-between align-items-center"
+                                     id="headingOne">
+                                    <h2 class="mb-0">
+
+                                        <button type="button" class="btn" data-toggle="collapse"
+                                                data-target="#collapseOne" th:text="${task.getName()}"> ...
+                                        </button>
+
+                                    </h2>
+                                    <form th:method="delete" th:action="@{/task/{taskId}(taskId=${task.getId()})}">
+                                        <button type="submit" class="close" aria-label="Delete" data-toggle="tooltip"
+                                                data-placement="top" title="Delete task">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </form>
+                                </div>
+                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                     data-parent="#accordionExample">
+                                    <div class="card-body"
+                                         th:style="${task.isComplete()} == true ? 'background-color: #bfff80' : 'background-color: white'">
+
+                                        <label class="task-label">Task deadline</label>
+                                            <p th:text="${task.date}">A description list is perfect
+                                                for defining terms.
+                                            </p>
+
+                                            <label class="task-label">Task priority</label>
+                                            <p  th:text="${task.priority}">None
+                                            </p>
+
+
+                                        <label class="task-label" th:unless="${#strings.isEmpty(task.subtaskName)}">Subtask </label>
+                                            <p th:unless="${#strings.isEmpty(task.subtaskName)}" th:text="${task.subtaskName}">None
+                                            </p>
+
+
+                                        <label class="task-label" th:unless="${#strings.isEmpty(task.noteDescription)}">Notes </label>
+                                                <p class="text-break" th:unless="${#strings.isEmpty(task.noteDescription)}" th:text="${task.noteDescription}">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
+
+
+
+
+                                        <div class="custom-control custom-checkbox custom-checkbox-green">
+                                            <input type="checkbox"
+                                                   class="custom-control-input custom-control-input-green"
+                                                   id="customCheck">
+                                            <label class="custom-control-label" for="customCheck"></label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+
+
+                    <!--
+                     <ul class="col list-group" th:each="task:${tasks}">
+                         <li class="list-group-item" th:text="${task.getName()}">Active item</li>
+
+                     </ul>
+ -->
 
                 </div>
                 <div class="col-md-6">
                     <!-- Your second column here -->
 
-                    <form>
+
+                    <!--/*@thymesVar id="newTask" type="pl.senti.effectiveplanningapp.model.request.TaskWriteModel"*/-->
+                    <form action="#" method="post" th:action="@{/home/addTask}" th:object="${newTask}">
                         <div class="form-group">
                             <label>Task name</label>
-                            <input type="text" class="form-control" placeholder="Enter name">
+                            <input type="text" class="form-control" placeholder="Enter task name" th:field="*{name}">
+                            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect date</p>
+                            <div class="invalid-feedback">
+
+                            </div>
                         </div>
 
                         <div class="form-group">
                             <label>Deadline</label>
                             <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-                                <input type="text" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}-[0-9]{2}:[0-9]{2}-([AaPp][Mm]))"
+                                <input type="text" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}"
                                        class="form-control datetimepicker-input"
-                                       data-target="#datetimepicker1" placeholder="Date"/>
+                                       data-target="#datetimepicker1" placeholder="Date" th:field="*{date}"/>
                                 <div class="input-group-append" data-target="#datetimepicker1"
                                      data-toggle="datetimepicker">
                                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                 </div>
                             </div>
+                            <div class="invalid-feedback">
+                                <p th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></p>
+                            </div>
                         </div>
 
                         <div class="form-group">
                             <label>Notes</label>
-                            <textarea class="form-control" rows="3" placeholder="Insert your notes here"></textarea>
+                            <textarea class="form-control" rows="3" placeholder="Insert your notes here"
+                                      th:field="*{noteDescription}"></textarea>
                         </div>
 
                         <div class="form-group">
                             <label>Priority</label>
-                            <select class="form-control">
-                                <option>None</option>
-                                <option>Height</option>
-                                <option>Medium</option>
-                                <option>Low</option>
+                            <!--/*@thymesVar id="priorityOptions" type="java.util.List<pl.senti.effectiveplanningapp.model.entities.Priority>"*/-->
+                            <select class="form-control" th:field="${newTask.priority}">
+                                <option th:each="priority :${priorityOptions}" th:text="${priority.name()}"
+                                        th:value="${priority}">None
+                                </option>
+
+                            </select>
+                        </div>
+
+                        <!--/*@thymesVar id="tasksList" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskListReadModel>"*/-->
+                        <div class="form-group">
+                            <label>Choose task List</label>
+                            <select class="form-control" th:field="*{taskListId}">
+                                <option th:each="taskList : ${tasksList}" th:text="${taskList.getName()}"
+                                        th:value="${taskList.getId()}"></option>
+
                             </select>
                         </div>
 
                         <div class="form-group">
                             <label>Subtask</label>
-                            <input type="text" class="form-control" placeholder="Enter name of subtask">
+                            <input type="text" class="form-control" placeholder="Enter name of subtask"
+                                   th:field="*{subtaskName}">
                         </div>
                         <div class="form-group">
                             <div class="row">
                                 <div class="col text-center">
-                        <button type="submit" class="btn btn-outline-dark" style="margin: 10px;width: 40%" >Add task</button>
+                                    <button type="submit" class="btn btn-outline-dark" style="margin: 10px;width: 40%">
+                                        Add task
+                                    </button>
                                 </div>
+                            </div>
+
+                            <div class="alert alert-success" role="alert" th:if="${message!=null}">
+                                <!--/*@thymesVar id="message" type="java.lang.String"*/-->
+                                <p th:text="${message}"></p>
                             </div>
                         </div>
                     </form>
@@ -214,25 +377,15 @@
     </div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-<script src="https://kit.fontawesome.com/f592291c08.js" crossorigin="anonymous"></script>
 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
-<link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css"/>
-
 
 </body>
 </html>
