--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,38 +1,330 @@
-<!DOCTYPE html >
-<html xmlns:th="http://www.thymeleaf.org">
-
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Login Success</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/f592291c08.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <styles>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-                integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-                crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-                integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-                crossorigin="anonymous"></script>
+        <style>
+            #wrapper {
+                overflow-x: hidden;
+            }
+
+            #sidebar-wrapper {
+                min-height: 100vh;
+                margin-left: -15rem;
+                -webkit-transition: margin .25s ease-out;
+                -moz-transition: margin .25s ease-out;
+                -o-transition: margin .25s ease-out;
+                transition: margin .25s ease-out;
+            }
+
+            #sidebar-wrapper .sidebar-heading {
+                padding: 0.875rem 1.25rem;
+                font-size: 1.2rem;
+            }
+
+            #sidebar-wrapper .sidebar-text {
+                padding: 0.875rem 1.25rem;
+                font-size: 1rem;
+                font-weight: bold;
+            }
+
+            #sidebar-wrapper .sidebar-image-container {
+                margin-left: auto;
+                margin-right: auto;
+                padding: 20px;
+            }
+
+            #sidebar-wrapper .list-group {
+                width: 15rem;
+                margin: 10px;
+            }
+
+            #page-content-wrapper {
+                min-width: 100vw;
+            }
+
+            #wrapper.toggled #sidebar-wrapper {
+                margin-left: 0;
+            }
+
+            @media (min-width: 768px) {
+                #sidebar-wrapper {
+                    margin-left: 0;
+                }
+
+                #page-content-wrapper {
+                    min-width: 0;
+                    width: 100%;
+                }
+
+                #wrapper.toggled #sidebar-wrapper {
+                    margin-left: -15rem;
+                }
+
+
+            }
+
+            .bs-example {
+                margin: 20px;
+            }
+
+            .greenBackground {
+                background-color: green;
+                opacity: 0.6;
+            }
+
+            .task-label {
+                font-weight: bold;
+            }
+        </style>
+        <script>
+            $(function () {
+                $('#datetimepicker1').datetimepicker({
+                    format: 'YYYY-MM-DD HH:mm', // or 'l' (lowercase L) for non-zero-padded
+                    date: moment()
+                });
+            });
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });</script>
     </styles>
 </head>
-
 <body>
+<div th:insert="navbar:: navbar"></div>
+<div class="d-flex" id="wrapper">
+    <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="sidebar-image-container">
+            <!--/*@thymesVar id="src" type="java.lang.String"*/-->
+            <img class="rounded-circle z-depth-2" width="80px" th:src="@{${src}}"
+                 data-holder-rendered="true" src="Image">
+        </div>
+        <div class="sidebar-heading">Welcome <!--/*@thymesVar id="name" type="java.lang.String"*/-->
+            <span th:text="${name}">user</span>!
+        </div>
+        <div class="sidebar-text"> Tasks List</div>
+        <p th:if="${#lists.isEmpty(tasksList)}"
+           style="color: #004085;background-color: #cce5ff;border-color: #b8daff;padding: 10px;">
+            You do not have any to-do lists.Create one!
+        </p>
+        <!--/*@thymesVar id="tasksList" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskListReadModel>"*/-->
+        <div class="list-group list-group-flush" th:each="taskList : ${tasksList}">
 
-<main class="page landing-page">
+            <div style="display: flex;padding-bottom: 10px;padding-right: 5px">
+                <form method="get" th:action="@{/home/task/{taskListId}(taskListId=${taskList.getId()})}"
+                      style="min-width: 80%">
+                    <button class="list-group-item list-group-item-action bg-light"
+                            style="display: inline-block;padding: 10px;"
+                            th:text="${taskList.getName()}">Home
+                    </button>
+                </form>
 
-    <div >
-        <p th:if="${errorMessage}" th:utext="${errorMessage}"></p>
-        <h4><a th:href="@{/oauth2/authorization/google}" >Google</a> </h4>
-        <h4><a th:href="@{/oauth2/authorization/github}" >Github</a> </h4>
-        <h4><a th:href="@{/oauth2/authorization/facebook}" >Facebook</a> </h4>
+                <form th:method="delete" th:action="@{/taskList/{taskListId}(taskListId=${taskList.getId()})}">
+                    <button class="btn btn-danger btn-sm rounded-0" type="submit" data-toggle="tooltip"
+                            data-placement="top" title="Delete"
+                            style="display: inline-block;padding: 12px;"><i
+                            class="fa fa-trash"></i></button>
+                </form>
+            </div>
+
+
+        </div>
+        <!--/*@thymesVar id="newTaskList" type="pl.senti.effectiveplanningapp.model.request.TaskListWriteModel"*/-->
+        <form action="/home/addTaskList" method="post" th:object="${newTaskList}">
+            <div class="form-group" style="padding: 10px">
+                <label>Add new list</label>
+                <input type="text" class="form-control" placeholder="Enter name" th:field="*{name}">
+
+            </div>
+            <p style="color: #856404;background-color: #fff3cd;border-color: #ffeeba;padding: 10px;" role="alert"
+               th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+            <div class="row">
+                <div class="col text-center">
+                    <button type="submit" class="btn btn-outline-dark">Add</button>
+                </div>
+            </div>
+        </form>
+
     </div>
+    <div id="page-content-wrapper">
+        <div class="container-fluid">
+            <div class="modal-body row">
+                <div class="col-md-6">
+                    <!-- first column here -->
+                    <!--/*@thymesVar id="tasks" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskReadModel>"*/-->
+                    <div class="bs-example">
 
-</main>
+                        <div class="accordion" id="accordionExample">
+
+                            <div class="card" th:each="task : ${tasks}"
+                                 th:style="${task.isComplete()} == true ? 'background-color: #bfff80' : 'background-color: white'">
+
+                                <div class="card-header d-flex justify-content " id="headingOne">
+                                    <div class="mr-auto p-2">
+                                        <h2 class="mb-0">
+
+                                            <button type="button" class="btn" data-toggle="collapse"
+                                                    th:attr="data-target='#accordion_'+${task.name}"
+                                                    th:text="${task.getName()}">
+                                            </button>
+
+                                        </h2>
+                                    </div>
+                                    <div class="p-2">
+                                        <form th:method="patch"
+                                              th:action="@{/task/{taskId}/{taskListId} (taskId=${task.getId()},taskListId=${task.getTaskListId()})}">
+                                            <button type="submit" class="btn btn-outline-secondary"
+                                                    aria-label="Change status" data-toggle="tooltip"
+                                                    data-placement="top" title="Change status">
+                                                <span th:text="${task.complete} ? 'UNDONE' : ' DONE '"></span>
+                                            </button>
+                                        </form>
+                                    </div>
+                                    <div class="p-2">
+                                        <form th:method="delete"
+                                              th:action="@{/task/{taskId}/{taskListId} (taskId=${task.getId()},taskListId=${task.getTaskListId()})}">
+                                            <button type="submit" class="close" aria-label="Delete"
+                                                    data-toggle="tooltip"
+                                                    data-placement="top" title="Delete task">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                                <div th:id="'accordion_'+${task.name}" class="collapse" aria-labelledby="headingOne"
+                                     data-parent="#accordionExample">
+                                    <div class="card-body">
+
+                                        <label class="task-label">Task deadline</label>
+                                        <p th:text="${task.date}">
+                                        </p>
+
+                                        <label class="task-label">Task priority</label>
+                                        <p th:text="${task.priority}">
+                                        </p>
+
+
+                                        <label class="task-label" th:unless="${#strings.isEmpty(task.subtaskName)}">Subtask </label>
+                                        <p th:unless="${#strings.isEmpty(task.subtaskName)}"
+                                           th:text="${task.subtaskName}">
+                                        </p>
+
+
+                                        <label class="task-label" th:unless="${#strings.isEmpty(task.noteDescription)}">Notes </label>
+                                        <p class="text-break" th:unless="${#strings.isEmpty(task.noteDescription)}"
+                                           th:text="${task.noteDescription}"></p>
+
+                                        <label class="task-label">Status task</label>
+                                        <p th:if="${task.complete} ">Done </p>
+                                        <p th:unless="${task.complete} ">Undone </p>
+
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!--second column here -->
+
+                    <!--/*@thymesVar id="tasksList" type="java.util.List<pl.senti.effectiveplanningapp.model.response.TaskListReadModel>"*/-->
+                    <!--/*@thymesVar id="newTask" type="pl.senti.effectiveplanningapp.model.request.TaskWriteModel"*/-->
+                    <form action="#" method="post" th:action="@{/home/addTask/{taskListId}}" th:object="${newTask}">
+                        <h4>Create new task</h4>
+                        <div class="form-group">
+                            <label>Choose task List</label>
+                            <p th:if="${#lists.isEmpty(tasksList)}" class="alert alert-primary" role="alert">
+                                First create a to-do list to be able to add tasks
+                            </p>
+                            <select class="form-control" th:field="*{taskListId}" required>
+                                <option th:each="taskList : ${tasksList}" th:text="${taskList.getName()}"
+                                        th:value="${taskList.getId()}"
+                                        th:name="taskListId"></option>
+
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="validationName">Task name</label>
+                            <input type="text" class="form-control" id="validationName" placeholder="Enter task name"
+                                   th:field="*{name}">
+                            <p class="alert alert-warning" role="alert" th:if="${#fields.hasErrors('name')}"
+                               th:errors="*{name}"></p>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Deadline</label>
+                            <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                                <input type="text" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}"
+                                       class="form-control datetimepicker-input"
+                                       data-target="#datetimepicker1" placeholder="Date" th:field="*{date}"/>
+                                <div class="input-group-append" data-target="#datetimepicker1"
+                                     data-toggle="datetimepicker">
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Notes</label>
+                            <textarea class="form-control" rows="4" placeholder="Insert your notes here"
+                                      th:field="*{noteDescription}"></textarea>
+                            <p class="alert alert-warning" role="alert" th:if="${#fields.hasErrors('noteDescription')}"
+                               th:errors="*{noteDescription}"></p>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Priority</label>
+                            <!--/*@thymesVar id="priorityOptions" type="java.util.List<pl.senti.effectiveplanningapp.model.entities.Priority>"*/-->
+                            <select class="form-control" th:field="${newTask.priority}">
+                                <option th:each="priority :${priorityOptions}" th:text="${priority.name()}"
+                                        th:value="${priority}">None
+                                </option>
+
+                            </select>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label>Subtask</label>
+                            <input type="text" class="form-control" placeholder="Enter name of subtask"
+                                   th:field="*{subtaskName}">
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col text-center">
+                                    <button type="submit" class="btn btn-outline-dark" id="addTaskButton"
+                                            style="margin: 10px;width: 40%">
+                                        Add task
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <div class="container text-center">
+        <small>Copyright &copy; Effective planning Application</small>
+    </div>
+</footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
 </body>
-
 </html>
